# Aroiwa-MobileApp-Project

./: .jenkinsfile  README.md
backend/: .env  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
backend/aroiwa/: config.py  deps.py  main.py  security.py
backend/aroiwa/models/: __init__.py  recipes.py  scores.py  users.py
backend/aroiwa/routers/: __init__.py  authentication.py  recipes.py  scores.py  users.py
backend/aroiwa/tests/: main_test.py
backend/scripts/: run-api.bat
frontend/aroiwa/: README.md  pubspec.yaml
frontend/aroiwa/android/app/: build.gradle
frontend/aroiwa/android/app/src/main/: AndroidManifest.xml
frontend/aroiwa/android/app/src/main/kotlin/com/example/aroiwa/: MainActivity.kt
frontend/aroiwa/ios/Runner/: Info.plist
frontend/aroiwa/ios/Runner.xcodeproj/: project.pbxproj
frontend/aroiwa/lib/: app.dart  main.dart
frontend/aroiwa/lib/view/: add_recipe_page.dart  login_page.dart  profile_detail_page.dart  recipe_detail_page.dart  recipe_owner_detail_page.dart  recipes_list_page.dart  register_page.dart
frontend/aroiwa/linux/: CMakeLists.txt  my_application.cc
frontend/aroiwa/macos/Runner.xcodeproj/: project.pbxproj
frontend/aroiwa/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
frontend/aroiwa/macos/Runner/Configs/: AppInfo.xcconfig
frontend/aroiwa/web/: index.html  manifest.json
frontend/aroiwa/windows/: CMakeLists.txt
frontend/aroiwa/windows/runner/: Runner.rc  main.cpp
